db_style.css
body {
	background: #CACACA; /* Old browsers */
	background: -moz-linear-gradient(top,  #f7f7f7 2%, #d1d1d1 7%, #c9c9c9 99%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(2%,#f7f7f7), color-stop(7%,#d1d1d1), color-stop(99%,#c9c9c9)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #f7f7f7 2%,#d1d1d1 7%,#c9c9c9 99%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #f7f7f7 2%,#d1d1d1 7%,#c9c9c9 99%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #f7f7f7 2%,#d1d1d1 7%,#c9c9c9 99%); /* IE10+ */
	background: linear-gradient(to bottom,  #f7f7f7 2%,#d1d1d1 7%,#c9c9c9 99%); /* W3C */
	font-family: 'Open Sans', "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
	max-width: 50em;
	font-weight: lighter;
	margin: 0 auto;
	color: #444;
}
header {
	background-color:#E68A00;
	color:#fff;
	font-weight: 200;
 	padding:1em 1em;
  margin-top: 0px;
  margin-bottom: 0px;
}
header::before {
	content: url("images/icona_fidocadj_128x128.png");
	float:left;
}
#content {
	border-style:solid;
	border-color:#E68A00;
	background-color:#fff;
}
p {
	margin-left: 1em;
	margin-right: 1em;
}
b {
	font-weight: 500;
	color: #101010;
}
a {
	color: #00A000;
	text-decoration:none;
}
a:visited {
	color: #D57000;
}
b.mainmenu {
	vertical-align:5px;
}
a.mainmenu {
	color: #FFFFFF;
	text-decoration:none;
	vertical-align:5px;
}
a.mainmenu:visited {
	color: #EEEEEE;
}

div.code {
	overflow: auto;
	width:20em;
	height:10em;
	border-style:solid;
	border-color:#E68A00;
	padding: 5px 10px 5px 10px;
	border-width: 1px;
}
h1 {
	font-weight: 100;
	color:#FFFFFF;
	font-size: 500%;
	text-align:left;
	padding: 0em 0em 0em 0em;
	margin: 0em 0em 0em 0em;
}
h2 {
	font-weight: 100;
	padding: 0em 0em 0em 0em;
	margin: 0em 0em 0em 0em;
}
h3 {
	text-align:center;
}
h4 {
	margin-left: 1em;
	margin-right: 1em;
}
table.dtab {
	font-size:96%;
	line-height:1.3em;
	color: #333;
	background-color:#fff;
	border-collapse:collapse;
	text-align:center;
	/*letter-spacing:.05em;*/
	font-weight: lighter;
	width:95%;
	margin-left: 1em;
  margin-right: 1em;
}
table.dtab tbody tr th {
	border-right: 5px solid #fff;
	padding-left:2px;
	letter-spacing:1px;
	text-align:center;
	color: #fff;
	background: #585;
	font-weight: normal;
}
table.dtab tbody th a {
	color: white;
}
table.dtab td, table.dtab th {
	padding:5px;
}
table.dtab tbody tr, table.dtab tbody tr {
	border-bottom: 1px solid #090;
}
img.indisplay {
	border: 0px solid;
	padding: 1em 0.2em 0.2em 0.2em;
	display: block;
	margin-left: auto;
	margin-right: auto;
	max-width: 100%;
}
img.float {
	float: left;
	margin: 0px 0px 0px 0px;
  border: 0px solid;
  padding: 1em 1em 1em 1em;
}
#license {
	color: #111;
	font-size: 80%;
 	font-family: monospace;
	border: 1em;
	margin-left: 1em;
  margin-right: 1em;
}
span.command {
	color: #D57000;
 	font-family: monospace;
 	font-size: 120%;
}
#faq_index{
	list-style-position:inside;
}
#faq_index a{
	line-height: 2em;
}
.faq_title{
	color:#444;
}
.go_top_label{
	float: right;
	margin-right: 20px;
	font-size: 1em;
}

